tests/NormalTests/paczka1/fuzzy1/94594309.err
Error in line 3: 0oEBc S945 95,6
Error in line 8: S945 A331 99,8
Error in line 2: x7hzqzB A268 73,4
Error in line 29: 0oEBc A1 9,0
Error in line 33: 0oEBc A331 29,7
